--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -31,6 +31,8 @@ body {
   color: #212529;
   text-align: left;
   background-color: #fff;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 
 [tabindex="-1"]:focus {
@@ -142,13 +144,13 @@ sup {
 }
 
 a {
-  color: theme-color("primary");
+  color: #fc4a1a;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
 }
 a:hover {
-  color: #0056b3;
+  color: #71210c;
   text-decoration: underline;
 }
 
