--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -18,7 +18,18 @@ html {
 @-ms-viewport {
   width: device-width;
 }
-article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, section {
+
+article,
+aside,
+dialog,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+nav,
+section {
   display: block;
 }
 
@@ -45,7 +56,12 @@ hr {
   overflow: visible;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: 'Gothic A1', sans-serif;
   margin: 0;
   font-weight: bold;
@@ -146,11 +162,9 @@ sup {
 }
 
 a {
-  color: #fc4a1a;
-  text-decoration: none;
-  background-color: transparent;
-  -webkit-text-decoration-skip: objects;
+  color: #71210c;
 }
+
 a:hover {
   color: #71210c;
   text-decoration: underline;
@@ -160,10 +174,13 @@ a:not([href]):not([tabindex]) {
   color: inherit;
   text-decoration: none;
 }
-a:not([href]):not([tabindex]):hover, a:not([href]):not([tabindex]):focus {
+
+a:not([href]):not([tabindex]):hover,
+a:not([href]):not([tabindex]):focus {
   color: inherit;
   text-decoration: none;
 }
+
 a:not([href]):not([tabindex]):focus {
   outline: 0;
 }
