--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Gothic+A1:200,400,700');
+@import url('https://fonts.googleapis.com/css?family=Gothic+A1:700');
 
 *,
 *::before,
@@ -19,14 +19,8 @@ html {
   width: device-width;
 }
 
-article,
-aside,
-dialog,
-figcaption,
-figure,
 footer,
 header,
-hgroup,
 main,
 nav,
 section {
@@ -42,8 +36,6 @@ body {
   color: #212529;
   text-align: left;
   background-color: #fff;
-  max-width: 1024px;
-  margin: 0 auto;
 }
 
 [tabindex="-1"]:focus {
@@ -71,40 +63,29 @@ h1 {
   font-size: 20px;
   text-transform: uppercase;
   letter-spacing: .45em;
-  color: #71210c;
 }
 
 h2 {
-  font-size: 16px;
+  font-size: 17px;
   text-transform: uppercase;
-  letter-spacing: .45em;
-  margin-bottom: 10px;
-  color: #71210c;
+  letter-spacing: .3em;
+  margin-bottom: 12px;
+}
+@media (min-width: 768px) {
+  h2 {
+    font-size: 20px;
+  }
 }
 
 h3 {
   font-size: 16px;
+  line-height: 1;
 }
 
 p {
   margin-top: 0;
   margin-bottom: 10px;
 }
-
-abbr[title],
-abbr[data-original-title] {
-  text-decoration: underline;
-  text-decoration: underline dotted;
-  cursor: help;
-  border-bottom: 0;
-}
-
-address {
-  margin-bottom: 1rem;
-  font-style: normal;
-  line-height: inherit;
-}
-
 ol,
 ul,
 dl {
@@ -119,54 +100,12 @@ ul ol {
   margin-bottom: 0;
 }
 
-dt {
-  font-weight: 700;
-}
-
-dd {
-  margin-bottom: .5rem;
-  margin-left: 0;
-}
-
-blockquote {
-  margin: 0 0 1rem;
-}
-
-dfn {
-  font-style: italic;
-}
-
 b,
 strong {
   font-weight: bolder;
 }
 
-small {
-  font-size: 80%;
-}
-
-sub,
-sup {
-  position: relative;
-  font-size: 75%;
-  line-height: 0;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -.25em;
-}
-
-sup {
-  top: -.5em;
-}
-
-a {
-  color: #71210c;
-}
-
 a:hover {
-  color: #71210c;
   text-decoration: underline;
 }
 
@@ -185,25 +124,6 @@ a:not([href]):not([tabindex]):focus {
   outline: 0;
 }
 
-pre,
-code,
-kbd,
-samp {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
-
-pre {
-  margin-top: 0;
-  margin-bottom: 1rem;
-  overflow: auto;
-  -ms-overflow-style: scrollbar;
-}
-
-figure {
-  margin: 0 0 1rem;
-}
-
 img {
   vertical-align: middle;
   border-style: none;
@@ -214,31 +134,11 @@ svg:not(:root) {
 }
 
 a,
-area,
 button,
 [role="button"],
-input:not([type="range"]),
 label,
-select,
-summary,
-textarea {
+select {
   touch-action: manipulation;
-}
-
-table {
-  border-collapse: collapse;
-}
-
-caption {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-  color: #868e96;
-  text-align: left;
-  caption-side: bottom;
-}
-
-th {
-  text-align: inherit;
 }
 
 label {
@@ -248,6 +148,10 @@ label {
 
 button {
   border-radius: 0;
+  appearance: none;
+	background: none;
+	padding: 0;
+	border: none;
 }
 
 button:focus {
@@ -257,9 +161,7 @@ button:focus {
 
 input,
 button,
-select,
-optgroup,
-textarea {
+select {
   margin: 0;
   font-family: inherit;
   font-size: inherit;
@@ -277,93 +179,12 @@ select {
 }
 
 button,
-html [type="button"],
-[type="reset"],
-[type="submit"] {
+html [type="button"] {
   -webkit-appearance: button;
 }
 
 button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
+[type="button"]::-moz-focus-inner {
   padding: 0;
   border-style: none;
-}
-
-input[type="radio"],
-input[type="checkbox"] {
-  box-sizing: border-box;
-  padding: 0;
-}
-
-input[type="date"],
-input[type="time"],
-input[type="datetime-local"],
-input[type="month"] {
-  -webkit-appearance: listbox;
-}
-
-textarea {
-  overflow: auto;
-  resize: vertical;
-}
-
-fieldset {
-  min-width: 0;
-  padding: 0;
-  margin: 0;
-  border: 0;
-}
-
-legend {
-  display: block;
-  width: 100%;
-  max-width: 100%;
-  padding: 0;
-  margin-bottom: .5rem;
-  font-size: 1.5rem;
-  line-height: inherit;
-  color: inherit;
-  white-space: normal;
-}
-
-progress {
-  vertical-align: baseline;
-}
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-[type="search"] {
-  outline-offset: -2px;
-  -webkit-appearance: none;
-}
-
-[type="search"]::-webkit-search-cancel-button,
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-::-webkit-file-upload-button {
-  font: inherit;
-  -webkit-appearance: button;
-}
-
-output {
-  display: inline-block;
-}
-
-summary {
-  display: list-item;
-}
-
-template {
-  display: none;
-}
-
-[hidden] {
-  display: none !important;
 }
