--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Gothic+A1:700');
+@import url('https://fonts.googleapis.com/css2?family=Gothic+A1:wght@700&display=swap');
 
 *,
 *::before,
