--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -15,10 +15,6 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-@-ms-viewport {
-  width: device-width;
-}
-
 footer,
 header,
 main,
@@ -91,6 +87,7 @@ ul,
 dl {
   margin-top: 0;
   margin-bottom: 1rem;
+  padding-inline-start: 14px;
 }
 
 ol ol,
@@ -98,6 +95,11 @@ ul ul,
 ol ul,
 ul ol {
   margin-bottom: 0;
+  list-style-type: disc;
+}
+
+li {
+  margin-bottom: 8px;
 }
 
 b,
@@ -133,14 +135,6 @@ svg:not(:root) {
   overflow: hidden;
 }
 
-a,
-button,
-[role="button"],
-label,
-select {
-  touch-action: manipulation;
-}
-
 label {
   display: inline-block;
   margin-bottom: .5rem;
@@ -152,39 +146,4 @@ button {
 	background: none;
 	padding: 0;
 	border: none;
-}
-
-button:focus {
-  outline: 1px dotted;
-  outline: 5px auto -webkit-focus-ring-color;
-}
-
-input,
-button,
-select {
-  margin: 0;
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-}
-
-button,
-input {
-  overflow: visible;
-}
-
-button,
-select {
-  text-transform: none;
-}
-
-button,
-html [type="button"] {
-  -webkit-appearance: button;
-}
-
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner {
-  padding: 0;
-  border-style: none;
 }
